# proxy-http

./: .gitignore  CMakeLists.txt  Makefile  README.md  TCP_Server_Nonblocking.c  buffer.c  buffer.h  connection.c  http.c  http.h  http_codes.h  httpd  httpd.8  httpnio.c  httpnio.h  main.c  mediaTypesParser.c  media_types.c  media_types.h  netutils.h  parameters.c  parameters.h  parser.c  parser.h  parser_utils.c  proxy  req  request.c  request.h  response.c  response.h  run  sctpclnt  selector.c  serverTCP.c  sock  socks  tcp-leña.c  tests.sh  testy
git_stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
include/: styles.h
request/: Makefile
request/examples/: GET_example.txt  POST_example.txt  POST_example_with_long_text.txt
request/src/: http_parser.c
response/: .gitignore  Makefile  exe.sh
response/examples/: entrada.txt  (+5 more)
sctp/: common.h  example_client.c  example_server.c  handlers.c  handlers.h  metrics_struct.h  sctp_integration.c  sctp_integration.h  sctpclnt.c
v1/: CMakeLists.txt  README.md  TCP_Server_Nonblocking.c  TCPserver  buffer.c  comunication_between_proceses.c  main.c  serverTCP.c
v1/include/: styles.h
v1/parsers/: http_request_parser.c  http_response_parser.c
v1/parsers/include/: http_request_parser.h  http_response_parser.h
v2/: .gitignore  CMakeLists.txt  Makefile  buffer.c  http.c  httpnio.c  main.c  parser.c  parser.h  parser_utils.c  proxy  request.c  request.h  selector.c  socks5.c  socks5.h  socks5nio.c  socks5nio.h
(+14 files in other folders)
